Update staff bios page with new peeps

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -21,15 +21,46 @@ menuorder: 4
 
       <div class="grid-sizer"></div>
 
+      <!-- Abbie -->
+      <div id="person-abbie" class="person-wrap js-iso-element" data-coffees="2" data-commits="0">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/abbie.png" | prepend: site.baseurl }}" alt="Abbie Reid" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Abbie Reid</h2>
+                  <h3 class="bio-sub">Studio Manager and Client Guru</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-abbie.jpg" | prepend: site.baseurl }}" alt="Abbie Reid" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Abbie’s daily to-do list is a long one. She takes care of our valuable clients, organises everything and everyone, and puts the “help” in Help Desk. A former journalist, you’ll find her fingerprints on all things written, from client advertisements and web pages to our social media accounts. Need something done in a hurry? Abbie is receptive to bribes including, but not limited to, wine, blue cheese and green tea. When not at the office she’s up in the Port Hills with her dog, Kevin or teaching a boxing bag some lessons.</p>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .bio-inner -->
+        </div> <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Abbie</h3>
+      </div> <!-- .person-wrap -->
+
       <!-- Abi -->
-      <div id="person-abi" class="person-wrap js-iso-element" data-coffees="2" data-commits="0" data-sleep="4">
+      <div id="person-abi" class="person-wrap js-iso-element" data-coffees="2" data-commits="0">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/abi.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
-<img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
             <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
@@ -55,7 +86,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Andrew -->
-      <div id="person-andrew" class="person-wrap js-iso-element" data-coffees="3" data-commits="115" data-sleep="6">
+      <div id="person-andrew" class="person-wrap js-iso-element" data-coffees="3" data-commits="115">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/andrew.png" | prepend: site.baseurl }}" alt="Andrew Pitts" />
@@ -87,7 +118,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Ed -->
-      <div id="person-ed" class="person-wrap js-iso-element" data-coffees="0" data-commits="872" data-sleep="0">
+      <div id="person-ed" class="person-wrap js-iso-element" data-coffees="0" data-commits="872">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/ed.png" | prepend: site.baseurl }}" alt="Ed Robinson" />
@@ -119,7 +150,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Ersin -->
-      <div id="person-ersin" class="person-wrap js-iso-element" data-coffees="1" data-commits="230" data-sleep="0">
+      <div id="person-ersin" class="person-wrap js-iso-element" data-coffees="1" data-commits="230">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/ersin.png" | prepend: site.baseurl }}" alt="Ersin Buckley" />
@@ -183,7 +214,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- George -->
-      <div id="person-george" class="person-wrap js-iso-element" data-coffees="2" data-commits="17" data-sleep="0">
+      <div id="person-george" class="person-wrap js-iso-element" data-coffees="2" data-commits="17">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/george.png" | prepend: site.baseurl }}" alt="George Wills" />
@@ -247,7 +278,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Jonathan -->
-      <div id="person-jonathan" class="person-wrap js-iso-element" data-coffees="1" data-commits="666" data-sleep="0">
+      <div id="person-jonathan" class="person-wrap js-iso-element" data-coffees="1" data-commits="666">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/jonathan.png" | prepend: site.baseurl }}" alt="Jonathan Prince" />
@@ -280,7 +311,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Josh -->
-      <div id="person-josh" class="person-wrap js-iso-element" data-coffees="2" data-commits="690" data-sleep="1">
+      <div id="person-josh" class="person-wrap js-iso-element" data-coffees="2" data-commits="690">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/josh.png" | prepend: site.baseurl }}" alt="Joshua Vial" />
@@ -312,7 +343,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Julia -->
-      <div id="person-julia" class="person-wrap js-iso-element" data-coffees="2" data-commits="281" data-sleep="8">
+      <div id="person-julia" class="person-wrap js-iso-element" data-coffees="2" data-commits="281">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/julia.png" | prepend: site.baseurl }}" alt="Julia Hide" />
@@ -343,8 +374,40 @@ menuorder: 4
         <h3 class="person-name-hover">Julia</h3>
       </div> <!-- .person-wrap -->
 
+      <!-- Kerry -->
+      <div id="person-kerry" class="person-wrap js-iso-element" data-coffees="3" data-commits="0">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/kerry.png" | prepend: site.baseurl }}" alt="Kerry Gibbs" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Kerry Gibbs</h2>
+                  <h3 class="bio-sub">Project Manager</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-kerry.jpg" | prepend: site.baseurl }}" alt="Kerry Gibbs" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Kerry keeps track of what’s being delivered when, by whom and how we’ll do it. Kerry brings 15 years of experience in the digital, advertising and creative industries. Gaining knowledge dabbling in design, development and 3D modelling, before becoming a digital Producer then Project director. In her downtime she can be found in Bottle Lake Forest with her pup, Ranger, skiing at Mt Hutt or indulging her inner petrolhead at motorsport events.</p>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .bio-inner -->
+        </div> <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Kerry</h3>
+      </div> <!-- .person-wrap -->
+
       <!-- Lewis -->
-      <div id="person-lewis" class="person-wrap js-iso-element" data-coffees="2" data-commits="499" data-sleep="0">
+      <div id="person-lewis" class="person-wrap js-iso-element" data-coffees="2" data-commits="499">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/lewis.png" | prepend: site.baseurl }}" alt="Lewis Christie" />
@@ -376,7 +439,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Mark -->
-      <div id="person-mark" class="person-wrap js-iso-element" data-coffees="3" data-commits="1379" data-sleep="0">
+      <div id="person-mark" class="person-wrap js-iso-element" data-coffees="3" data-commits="1379">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/mark.png" | prepend: site.baseurl }}" alt="Mark Stufart" />
@@ -408,7 +471,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Matt -->
-      <div id="person-matt" class="person-wrap js-iso-element" data-coffees="1" data-commits="2429" data-sleep="0">
+      <div id="person-matt" class="person-wrap js-iso-element" data-coffees="1" data-commits="2429">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/matt.png" | prepend: site.baseurl }}" alt="Matt Lang" />
@@ -440,7 +503,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Patrick -->
-      <div id="person-patrick" class="person-wrap js-iso-element" data-coffees="1" data-commits="1118" data-sleep="0">
+      <div id="person-patrick" class="person-wrap js-iso-element" data-coffees="1" data-commits="1118">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/patrick.png" | prepend: site.baseurl }}" alt="Patrick Walsh" />
@@ -472,7 +535,7 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Pete -->
-      <div id="person-pete" class="person-wrap js-iso-element" data-coffees="3" data-commits="0" data-sleep="0">
+      <div id="person-pete" class="person-wrap js-iso-element" data-coffees="3" data-commits="0">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/pete.png" | prepend: site.baseurl }}" alt="Pete Banks" />
@@ -505,7 +568,7 @@ Pete is a Project Management Professional, Prince2 Practitioner and is also a ce
       </div> <!-- .person-wrap -->
 
       <!-- Richie -->
-      <div id="person-richie" class="person-wrap js-iso-element" data-coffees="2" data-commits="1320" data-sleep="0">
+      <div id="person-richie" class="person-wrap js-iso-element" data-coffees="2" data-commits="1320">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/richie.png" | prepend: site.baseurl }}" alt="Richie Walker" />
@@ -535,6 +598,38 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
           </div> <!-- .bio-inner -->
         </div> <!-- .bio-wrap -->
         <h3 class="person-name-hover">Richard</h3>
+      </div> <!-- .person-wrap -->
+
+      <!-- Tom -->
+      <div id="person-tom" class="person-wrap js-iso-element" data-coffees="0" data-commits="1320">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/tom.png" | prepend: site.baseurl }}" alt="Tom Fenton" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Tom Fenton</h2>
+                  <h3 class="bio-sub">DevOps Manager and Software Developer</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-tom.jpg" | prepend: site.baseurl }}" alt="Tom Fenton" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Being tall, Tom has his head in the Cloud (think Amazon Web Services) and is constantly finding great ways to improve and monitor our hosting infrastructure. With over 15 years using Linux, the command-line-fu is strong with this one. When he isn't deploying to production, Tom can be found splashing around in a nearby pool or in the ocean. His suspicious aversion to coffee makes him something of an office curiosity.</p>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .bio-inner -->
+        </div> <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Tom</h3>
       </div> <!-- .person-wrap -->
 
       <!-- Sarah -->
@@ -601,11 +696,11 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
         <h3 class="person-name-hover">Steve</h3>
       </div> <!-- .person-wrap -->
 
-      <!-- Terri -->
-      <div id="person-terri" class="person-wrap js-iso-element" data-coffees="0" data-commits="0" data-sleep="0">
+      <!-- Stu -->
+      <div id="person-stu" class="person-wrap js-iso-element" data-coffees="0" data-commits="0" data-sleep="0">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/terri.png" | prepend: site.baseurl }}" alt="Terri Winder" />
+          <img class="person-image" src="{{ "/img/people/stu.png" | prepend: site.baseurl }}" alt="Stu Craig" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -617,20 +712,20 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
             <div class="faux-table">
               <div class="faux-table-cell">
                 <div class="bio-head">
-                  <h2 class="bio-heading">Terri Winder</h2>
-                  <h3 class="bio-sub">Web manager</h3>
+                  <h2 class="bio-heading">Stu Craig</h2>
+                  <h3 class="bio-sub">Software Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-terri.jpg" | prepend: site.baseurl }}" alt="Terri Winder" />
+                    <img src="{{ "/img/people/real-stu.jpg" | prepend: site.baseurl }}" alt="Stu Craig" />
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Terri nurtures a holistic view of our clients needs by sitting across the many aspects that make up their digital footprint. She is also in charge of prioritising work within the web team - so if you need something in a hurry Terri is the person you may need to bribe. Tickets to say the Dixie Chicks would go a long way to ensuring that deadline is met. Terri’s grandmother is also kinda famous - she holds the world record for the most injections over a lifetime.</p>
+                  <p>Stu has 20 years experience working as a Software Engineer, Technical Architect and Software Development Manager in the financial and resources sectors. He has always taken on jobs where he could spend at least half of his time cutting code. Stu recently gave up “all that enterprise nonsense” and moved to Queenstown with his wife and two very demanding cats, Tippy and Charley. (Fish birthday cake anyone?) His new location means he can hit the ski slopes regularly, reserving a healthy disrespect for &ldquo;dem pesky snowboarders&rdquo;.</p>
                 </div>
               </div>
             </div>
           </div> <!-- .bio-inner -->
         </div> <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Terri</h3>
+        <h3 class="person-name-hover">Stu</h3>
       </div> <!-- .person-wrap -->
 
       <!-- Tim -->
