--- a/src/careers/index.html
+++ b/src/careers/index.html
@@ -27,11 +27,11 @@ title: Media Suite | Careers
   </div>
 
     <div class="panel-inner max-760 clearfix">
-      <p>We cherish our culture, so every hire we make is carefully considered. If you’re tempted by joining the Media Suite Team, read on to see if our ideologies are aligned.</p>
+      <p>We cherish our culture, so every hire we make is carefully considered. If you’re tempted to join the Media Suite team, read on to see if our ideologies are aligned.</p>
 
-      <p>We are a team of curious-minded people who support each other, hold robust debates and don’t mind helping each other move house on the weekend. We thrive on challenges, we view our successes (and failures) as opportunities for growth, and we never, ever want to stop learning.</p>
+      <p>We are a team of curious-minded people who support each other, hold robust debates and don’t mind helping each other move house at the weekend. We thrive on challenges, we view our successes (and failures) as opportunities for growth, and we never, ever want to stop learning.</p>
 
-      <p>Our employment philosophy is simple. We look for the right people and then do what it takes to get them on board and keep them around. We aren’t scared to invest in the right people to help realise their potential.</p> 
+      <p>Our employment philosophy is simple. We look for the right people and then do what it takes to get them on board and keep them around. We aren’t scared to invest in the right people to help realise their potential.</p>
   </div>
 
   <div class="panel-inner max-1200 clearfix">
@@ -101,7 +101,7 @@ title: Media Suite | Careers
           support your team
           <div class="more-text-wrapper">
             <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">Everyone on the team is willing to drop what they’re doing to help their peers.We expect the same from you. You’ll need to be comfortable reviewing the work of others and providing teammates with constructive feedback.</span>
+            <span class="more-text">Everyone on the team is willing to drop what they’re doing to help their peers. We expect the same from you. You’ll need to be comfortable reviewing the work of others and providing teammates with constructive feedback.</span>
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@ title: Media Suite | Careers
           listen
           <div class="more-text-wrapper">
             <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">This is an environment where everyone’s ideas will be debated, turned upside-down and torn apart. After that, good ideas  may just stick and great ideas will be be iterated on and become part of who we are.</span>
+            <span class="more-text">This is an environment where everyone’s ideas will be debated, turned upside-down and torn apart. After that, good ideas may just stick and great ideas will be be iterated on and become part of who we are.</span>
           </div>
         </div>
         <div class="cell division"></div>
@@ -174,7 +174,7 @@ title: Media Suite | Careers
         <h2 class="lowercase service-heading">been teacher and student</h2>
         <ul>
           <li>Attended company-wide Agile training</li>
-          <li>Presented a topic at one of our “Learning Lunches” or local JS meetup.</li>
+          <li>Presented a topic at one of our Learning Lunches or local JS meetup.</li>
           <li>Been dispatched to conferences in Norway, Australia, New Zealand or Scotland</li>
           <li>Helped run the Southern Hemisphere's first NodeJS conference.</li>
         </ul>
@@ -189,7 +189,7 @@ title: Media Suite | Careers
       <div class="service-text">
         <h2 class="lowercase service-heading">had some fun</h2>
         <ul>
-          <li>Been involved with planning one of our ‘Media Suite Hack Days’</li>
+          <li>Been involved with planning one of our Media Suite Hack Days</li>
           <li>Eaten Yum Neua (pretty much any Wednesday)</li>
           <li>Escaped to the Marlborough Sounds, with quite a few beers,  for a weekend of “user testing”</li>
           <li>Communicated with our self-made robot who lives in our chat room; it has its own personality, gender and name (although these last two get changed frequently).</li>
