--- a/src/careers/index.html
+++ b/src/careers/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Media Suite | Careers
+menutitle: Careers
+menuorder: 5
 ---
 <div id="main-wrap" class="internal-page careers-page">
   <div class="panel-inner max-570 clearfix">
