--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,7 @@ ishome: true
             </div>
             <div class="col third-col" id="culture-col-3">
               <h4><img class="curious-minds-text" src="{{ "/img/title-curious-minds-wanted.png" | prepend: site.baseurl }}" alt="Curious minds wanted for curious work" /></h4>
-              <!--<a href="{{ "/careers" | prepend: site.baseurl }}" class="drop-btn orange-bg">Work here</a>-->
+              <a href="{{ "/careers" | prepend: site.baseurl }}" class="drop-btn orange-bg">Work here</a>
             </div>
           </div> <!-- .cols-wrap -->
         </div> <!-- .faux-table-cell -->
