--- a/src/careers/index.html
+++ b/src/careers/index.html
@@ -7,12 +7,12 @@ menuorder: 5
 <div id="main-wrap" class="internal-page careers-page">
   <div class="panel-inner max-570 clearfix">
     <h1 class="lowercase underline-orange">Careers</h1>
-    <div class="service-icons">
+    <!-- <div class="service-icons">
       <a href="#current-positions" class="service-icon js-scroll-to careers">
         <i class="icon-clipboard-01"></i>
         <h2 class="lowercase">View current positions</h2>
       </a>
-    </div>
+    </div> -->
   </div>
   <div class="banner-image js-image-fill">
     <div class="faux-table">
