Add note for job applications

--- a/src/careers/index.html
+++ b/src/careers/index.html
@@ -7,12 +7,12 @@ menuorder: 5
 <div id="main-wrap" class="internal-page careers-page">
   <div class="panel-inner max-570 clearfix">
     <h1 class="lowercase underline-orange">Careers</h1>
-    <!-- <div class="service-icons">
+    <div class="service-icons">
       <a href="#current-positions" class="service-icon js-scroll-to careers">
         <i class="icon-clipboard-01"></i>
         <h2 class="lowercase">View current positions</h2>
       </a>
-    </div> -->
+    </div>
   </div>
   <div class="banner-image js-image-fill">
     <div class="faux-table">
@@ -198,10 +198,10 @@ menuorder: 5
         </div>
       </div>
     </div>
-    <!--
-    <div id="current-positions" class="other-case-studies max-760" style="margin-top:80px;">
+    <div id="current-positions" class="other-case-studies max-760" style="margin-top: 80px;">
       <h1 class="lowercase">Current Positions</h1>
-      <div class="case-study-item clearfix">
+      <p>Could you be the next Media Suite team member? <a href="/say-hello">Contact us</a> with your Curriculum Vitae and cover letter.</p>
+      <!-- <div class="case-study-item clearfix">
         <a href="{{ "/careers/javascript-node-developer" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/careers/developer-graphic.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" style="margin-top:40px;" />
         </a>
@@ -212,8 +212,7 @@ menuorder: 5
             <a href="{{ "/careers/javascript-node-developer" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
-    -->
   </div>
 </div> <!-- #main-wrap -->
