Initial markup, svgs etc

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@ ishome: true
     </ul>
   </nav>
 
-  <section id="banner-panel">
+  <section id="banner-panel" class="first-panel">
     <div id="home-panel-nav">
       <div class="max-1200">
         <div id="home-nav-logo">
