--- a/src/culture/index.html
+++ b/src/culture/index.html
@@ -17,16 +17,18 @@ isculture: true
   </nav>
 
   <section id="culture-intro-panel" class="first-panel grey-panel">
-    <div class="panel-inner max-620 clearfix">
-      <h1 class="lowercase text-size-94">Our Culture</h1>
-      <p>Culture is people. At Media Suite, our people are the core of what we do.</p>
-      <p class="margin-40-bottom">Culture isn't something you can manufacture or force. We believe in hiring the right people who will contribute to, and evolve, the core principles our culture is based on.</p>
-      <ul class="no-list-style fancy-pants-font lowercase text-size-24 space-lis">
-        <li>Flexibility and accountability</li>
-        <li>Learning and growth</li>
-        <li>People and community</li>
-        <li>Value and integrity</li>
-      </ul>
+    <div class="panel-inner max-1000">
+      <div class="max-620 clearfix">
+        <h1 class="lowercase text-size-94">Our Culture</h1>
+        <p>Culture is people. At Media Suite, our people are the core of what we do.</p>
+        <p class="margin-40-bottom">Culture isn't something you can manufacture or force. We believe in hiring the right people who will contribute to, and evolve, the core principles our culture is based on.</p>
+        <ul class="no-list-style fancy-pants-font lowercase text-size-24 space-lis">
+          <li>Flexibility and accountability</li>
+          <li>Learning and growth</li>
+          <li>People and community</li>
+          <li>Value and integrity</li>
+        </ul>
+      </div>
     </div>
     <div class="heads-wrapper">
       <div class="heads-top">
@@ -61,6 +63,24 @@ isculture: true
           <svg id="clouds-svg" class="svg-content" version="1.1" viewBox="0 0 879 427" preserveAspectRatio="xMinYMin meet"></svg>
         </div>
       </div>
+      <div id="clouds-mobile">
+        <div class="mobile-cloud">
+          <h3 class="lowercase text-orange">Flexibility</h3>
+          <p>&ldquo;I have the flexibility to work wherever and whenever I want as long as I deliver my work. I find that many companies say they are flexible. Media Suite means it.&rdquo; <strong>- Ed</strong></p>
+        </div>
+        <div class="mobile-cloud">
+          <h3 class="lowercase text-orange">Accountability</h3>
+          <p>&ldquo;This isn’t just somewhere we work; it’s something we are all responsible for building. Wherever you fit in, we are relying on your initiative, your creativity and your drive to make it (and us) better at what we do.&rdquo; <strong>- Abi</strong></p>
+        </div>
+        <div class="mobile-cloud">
+          <h3 class="lowercase text-orange">Trust</h3>
+          <p>&ldquo;High performing teams are built on trust – and that trust rests on openness, respect and great communication.  We’re not necessarily looking for the best and brightest individuals – but the kind of people we can trust to bring the right diversity, knowledge and mindset to make our team better (not just bigger)&rdquo; <strong>- Abi</strong></p>
+        </div>
+        <div class="mobile-cloud">
+          <h3 class="lowercase text-orange">Freedom</h3>
+          <p>&ldquo;I get to travel the world and work remotely. That’s pretty rad.&rdquo; <strong>- Patrick (based in Bali)</strong></p>
+        </div>
+      </div>
     </div>
     <div id="dude-image">
       <div id="dude-svg-wrap" class="svg-container">
@@ -77,6 +97,30 @@ isculture: true
           <p>We want our team to be the best it can be, always pushing ourselves and challenging each other. We have training budget for all staff and we use it! We value open and honest discussion, asking each other for help and learning from our mistakes as a team.</p>
         </div>
       </div>
+      <div id="mobile-bulbs" class="clearfix">
+        <div class="mobile-bulb">
+          <div id="help-bulb-svg-wrap" class="svg-container">
+            <svg id="help-bulb-svg" class="svg-content" version="1.1" viewBox="0 0 242.3 241.2" preserveAspectRatio="xMinYMin meet"></svg>
+          </div>
+        </div>
+        <div class="mobile-bulb">
+          <div id="teamwork-bulb-svg-wrap" class="svg-container">
+            <svg id="teamwork-bulb-svg" class="svg-content" version="1.1" viewBox="0 0 234 260.4" preserveAspectRatio="xMinYMin meet"></svg>
+          </div>
+        </div>
+        <div class="mobile-bulb">
+          <div id="improving-bulb-svg-wrap" class="svg-container">
+            <svg id="improving-bulb-svg" class="svg-content" version="1.1" viewBox="0 0 320.7 246.7" preserveAspectRatio="xMinYMin meet"></svg>
+          </div>
+        </div>
+        <div class="mobile-bulb">
+          <div id="passion-bulb-svg-wrap" class="svg-container">
+            <svg id="passion-bulb-svg" class="svg-content" version="1.1" viewBox="0 0 247.7 210.7" preserveAspectRatio="xMinYMin meet"></svg>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="desktop-bulbs">
       <div id="plant-svg-wrap" class="svg-container">
         <svg id="plant-svg" class="svg-content" version="1.1" viewBox="0 0 1190 776" preserveAspectRatio="xMinYMin meet"></svg>
       </div>
@@ -85,18 +129,35 @@ isculture: true
 
   <section id="culture-community-panel" class="content-panel">
     <div class="panel-inner max-1200 clearfix js-fade-in-up">
-      <div class="max-760">
+      <div id="community-main-text" class="max-760">
         <h2 class="underline-orange lowercase">People and community</h2>
         <p>When we say we value our people, we really mean it. We want our people to want to come to work! Happy people are more productive and more likely to bring their A-game to our team. We consider ourselves a part of the wider tech community and our local Ferrymead neighbourhood. We support them both, adding value and facilitating growth wherever we can.</p>
       </div>
+      <div class="community-text-cols clearfix">
+        <div class="community-text-col">
+          <h3 class="text-orange lowercase">Fun</h3>
+          <p>We have a lot of fun because we don't take things too seriously and we give each other a hard time. Whether it be hacking the office speakers and playing annoying music for a long time, or hacking into someone's computer and turning the screen upside down so they're forced to restart. Having fun and causing mischief keeps us sane.</p>
+          <strong>- Patrick</strong>
+        </div>
+        <div class="community-text-col">
+          <h3 class="text-orange lowercase">Family</h3>
+          <p>Media Suite values and encourages family and life commitments. I work late, either at the office or from home, so that I can have every Wednesday off to be with my kids and enable my wife to work. Spending time with my kids and easing the burden on my family is important. I value the work-life balance.</p>
+          <strong>- Mark</strong>
+        </div>
+        <div class="community-text-col">
+          <h3 class="text-orange lowercase">Community</h3>
+          <p>We like to be involved and help improve the industry. We're active online, feeding back to the open source community. We help organise local events to increase the knowledge share of the tools we work with, and learn from others doing similar things.</p>
+          <strong>- Matt</strong>
+        </div>
+      </div>
     </div>
     <div id="picnic-images">
-      <svg id="picnic-lady-svg" version="1.1" viewBox="0 0 310 238.5" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-wheel-svg" version="1.1" viewBox="0 0 169.7 396.3" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-blanket-svg" version="1.1" viewBox="0 0 344 167" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-dude-svg" version="1.1" viewBox="0 0 303.6 254.5" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-bbq-svg" version="1.1" viewBox="0 0 478.7 308.4" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-baby-svg" version="1.1" viewBox="0 0 363.5 307.1" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-lady-svg" class="picnic-svg" version="1.1" viewBox="0 0 310 238.5" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-wheel-svg" class="picnic-svg" version="1.1" viewBox="0 0 169.7 396.3" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-blanket-svg" class="picnic-svg" version="1.1" viewBox="0 0 344 167" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-dude-svg" class="picnic-svg" version="1.1" viewBox="0 0 303.6 254.5" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-bbq-svg" class="picnic-svg" version="1.1" viewBox="0 0 478.7 308.4" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-baby-svg" class="picnic-svg" version="1.1" viewBox="0 0 363.5 307.1" preserveAspectRatio="xMinYMin meet"></svg>
     </div>
   </section>
 
@@ -105,6 +166,20 @@ isculture: true
       <div class="max-1000">
         <h2 class="underline-orange lowercase">Value and integrity</h2>
         <p>Media Suite is committed to treating its staff as adults. We trust our people to manage their own time and give their best at work, allowing them the freedom to set their own work-life balance. That could mean picking up the kids from school, getting to the gym or undertaking study. We believe you can have your cake and eat it too.</p>
+      </div>
+    </div>
+    <div class="mountain-text-wrap clearfix">
+      <div id="mountain-text-1" class="mountain-text">
+        <h3 class="text-orange lowercase">Adding value</h3>
+        <p>We challenge the client's ideas and try to understand what the client needs, we push back on ideas that we don't think will add value for our clients. <strong>- George</strong></p>
+      </div>
+      <div id="mountain-text-2" class="mountain-text">
+        <h3 class="text-orange lowercase">Engagement</h3>
+        <p>As we get more and more interesting projects, people are really engaging with them by recognising their contribution towards the project and delivering quality work to make it a success. <strong>- Andrew</strong></p>
+      </div>
+      <div id="mountain-text-3" class="mountain-text">
+        <h3 class="text-orange lowercase">Partnership</h3>
+        <p>We treat working with our clients as a partnership, we are open, honest and act in their best interests. <strong>- Pete</strong></p>
       </div>
     </div>
     <div id="mountain-image">
