Update culture page

--- a/src/culture/index.html
+++ b/src/culture/index.html
@@ -1,8 +1,6 @@
 ---
 layout: default
 title: Media Suite | Culture
-menutitle: Culture
-menuorder: 4
 isculture: true
 ---
 
@@ -13,6 +11,8 @@ isculture: true
       <li><a href="#culture-intro-panel" class="side-nav-link js-goto-panel active" data-no-instant><span class="side-nav-num">one</span><span class="side-nav-circle circle-off"></span></a></li>
       <li><a href="#culture-freedom-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">two</span><span class="side-nav-circle"></span></a></li>
       <li><a href="#culture-learning-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">three</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#culture-community-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">four</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#culture-value-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">five</span><span class="side-nav-circle"></span></a></li>
     </ul>
   </nav>
 
