Change order of slides, add to menu

--- a/src/culture/index.html
+++ b/src/culture/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: Media Suite | Culture
 isculture: true
+menutitle: Culture
+menuorder: 4
 ---
 
 <div id="main-wrap" class="culture-page js-panel-snap">
@@ -10,8 +12,8 @@ isculture: true
     <ul class="home-side-nav-list">
       <li><a href="#culture-intro-panel" class="side-nav-link js-goto-panel active" data-no-instant><span class="side-nav-num">one</span><span class="side-nav-circle circle-off"></span></a></li>
       <li><a href="#culture-freedom-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">two</span><span class="side-nav-circle"></span></a></li>
-      <li><a href="#culture-learning-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">three</span><span class="side-nav-circle"></span></a></li>
-      <li><a href="#culture-community-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">four</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#culture-community-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">three</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#culture-learning-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">four</span><span class="side-nav-circle"></span></a></li>
       <li><a href="#culture-value-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">five</span><span class="side-nav-circle"></span></a></li>
     </ul>
   </nav>
@@ -89,6 +91,40 @@ isculture: true
     </div>
   </section>
 
+  <section id="culture-community-panel" class="content-panel">
+    <div class="panel-inner max-1200 clearfix js-fade-in-up">
+      <div id="community-main-text" class="max-760">
+        <h2 class="underline-orange lowercase">People and community</h2>
+        <p>When we say we value our people, we really mean it. We want our people to want to come to work! Happy people are more productive and more likely to bring their A-game to our team. We consider ourselves a part of the wider tech community and our local Ferrymead neighbourhood. We support them both, adding value and facilitating growth wherever we can.</p>
+      </div>
+      <div class="community-text-cols clearfix">
+        <div class="community-text-col">
+          <h3 class="text-orange lowercase">Fun</h3>
+          <p>We have a lot of fun because we don't take things too seriously and we give each other a hard time. Whether it be hacking the office speakers and playing annoying music for a long time, or hacking into someone's computer and turning the screen upside down so they're forced to restart. Having fun and causing mischief keeps us sane.</p>
+          <strong>- Patrick</strong>
+        </div>
+        <div class="community-text-col">
+          <h3 class="text-orange lowercase">Family</h3>
+          <p>Media Suite values and encourages family and life commitments. I work late, either at the office or from home, so that I can have every Wednesday off to be with my kids and enable my wife to work. Spending time with my kids and easing the burden on my family is important. I value the work-life balance.</p>
+          <strong>- Mark</strong>
+        </div>
+        <div class="community-text-col">
+          <h3 class="text-orange lowercase">Community</h3>
+          <p>We like to be involved and help improve the industry. We're active online, feeding back to the open source community. We help organise local events to increase the knowledge share of the tools we work with, and learn from others doing similar things.</p>
+          <strong>- Matt</strong>
+        </div>
+      </div>
+    </div>
+    <div id="picnic-images">
+      <svg id="picnic-lady-svg" class="picnic-svg" version="1.1" viewBox="0 0 310 238.5" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-wheel-svg" class="picnic-svg" version="1.1" viewBox="0 0 169.7 396.3" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-blanket-svg" class="picnic-svg" version="1.1" viewBox="0 0 344 167" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-dude-svg" class="picnic-svg" version="1.1" viewBox="0 0 303.6 254.5" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-bbq-svg" class="picnic-svg" version="1.1" viewBox="0 0 478.7 308.4" preserveAspectRatio="xMinYMin meet"></svg>
+      <svg id="picnic-baby-svg" class="picnic-svg" version="1.1" viewBox="0 0 363.5 307.1" preserveAspectRatio="xMinYMin meet"></svg>
+    </div>
+  </section>
+
   <section id="culture-learning-panel" class="content-panel">
     <div class="panel-inner max-1200 clearfix js-fade-in-up">
       <div class="svg-text-overlay">
@@ -124,40 +160,6 @@ isculture: true
       <div id="plant-svg-wrap" class="svg-container">
         <svg id="plant-svg" class="svg-content" version="1.1" viewBox="0 0 1190 776" preserveAspectRatio="xMinYMin meet"></svg>
       </div>
-    </div>
-  </section>
-
-  <section id="culture-community-panel" class="content-panel">
-    <div class="panel-inner max-1200 clearfix js-fade-in-up">
-      <div id="community-main-text" class="max-760">
-        <h2 class="underline-orange lowercase">People and community</h2>
-        <p>When we say we value our people, we really mean it. We want our people to want to come to work! Happy people are more productive and more likely to bring their A-game to our team. We consider ourselves a part of the wider tech community and our local Ferrymead neighbourhood. We support them both, adding value and facilitating growth wherever we can.</p>
-      </div>
-      <div class="community-text-cols clearfix">
-        <div class="community-text-col">
-          <h3 class="text-orange lowercase">Fun</h3>
-          <p>We have a lot of fun because we don't take things too seriously and we give each other a hard time. Whether it be hacking the office speakers and playing annoying music for a long time, or hacking into someone's computer and turning the screen upside down so they're forced to restart. Having fun and causing mischief keeps us sane.</p>
-          <strong>- Patrick</strong>
-        </div>
-        <div class="community-text-col">
-          <h3 class="text-orange lowercase">Family</h3>
-          <p>Media Suite values and encourages family and life commitments. I work late, either at the office or from home, so that I can have every Wednesday off to be with my kids and enable my wife to work. Spending time with my kids and easing the burden on my family is important. I value the work-life balance.</p>
-          <strong>- Mark</strong>
-        </div>
-        <div class="community-text-col">
-          <h3 class="text-orange lowercase">Community</h3>
-          <p>We like to be involved and help improve the industry. We're active online, feeding back to the open source community. We help organise local events to increase the knowledge share of the tools we work with, and learn from others doing similar things.</p>
-          <strong>- Matt</strong>
-        </div>
-      </div>
-    </div>
-    <div id="picnic-images">
-      <svg id="picnic-lady-svg" class="picnic-svg" version="1.1" viewBox="0 0 310 238.5" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-wheel-svg" class="picnic-svg" version="1.1" viewBox="0 0 169.7 396.3" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-blanket-svg" class="picnic-svg" version="1.1" viewBox="0 0 344 167" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-dude-svg" class="picnic-svg" version="1.1" viewBox="0 0 303.6 254.5" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-bbq-svg" class="picnic-svg" version="1.1" viewBox="0 0 478.7 308.4" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-baby-svg" class="picnic-svg" version="1.1" viewBox="0 0 363.5 307.1" preserveAspectRatio="xMinYMin meet"></svg>
     </div>
   </section>
 
