--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@ ishome: true
                 <li>Learning</li>
                 <li>Value</li>
               </ul>
-              <!-- <a href="who-we-are/" class="drop-btn orange-bg">What we value</a> -->
+              <a href="{{ "/culture" | prepend: site.baseurl }}" class="drop-btn orange-bg">Our culture</a>
             </div>
             <div class="col third-col" id="culture-col-3">
               <h4><img class="curious-minds-text" src="{{ "/img/title-curious-minds-wanted.png" | prepend: site.baseurl }}" alt="Curious minds wanted for curious work" /></h4>
