Rogue Culture page fix

--- a/src/culture/index.html
+++ b/src/culture/index.html
@@ -167,7 +167,7 @@ menuorder: 4
     <div class="panel-inner max-1200 clearfix js-fade-in-up">
       <div class="max-1000">
         <h2 class="underline-orange lowercase">Value and integrity</h2>
-        <p>Media Suite is committed to treating its staff as adults. We trust our people to manage their own time and give their best at work, allowing them the freedom to set their own work-life balance. That could mean picking up the kids from school, getting to the gym or undertaking study. We believe you can have your cake and eat it too.</p>
+        <p>We spend a lot of time getting to know our clients so we can deliver the best ideas and cultivate a real partnership. We take on projects we’re passionate about.</p>
       </div>
     </div>
     <div class="mountain-text-wrap clearfix">
