Add Nat to people page

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -502,6 +502,38 @@ menuorder: 4
         <h3 class="person-name-hover">Matt</h3>
       </div> <!-- .person-wrap -->
 
+      <!-- Nat -->
+      <div id="person-nat" class="person-wrap js-iso-element" data-coffees="0" data-commits="0">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/nat.png" | prepend: site.baseurl }}" alt="Nat Eustace" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Nat Eustace</h2>
+                  <h3 class="bio-sub">UX Designer</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-nat.jpg" | prepend: site.baseurl }}" alt="Nat Eustace" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Natalie is all about you. A fully fledged user-centred design nerd, she makes sure we focus on the people who actually use what we build, giving them the best possible user experience. She also digs collaborative design and testing workflows. In her down time she'll be doing a spot of DIY with borrowed tools or plotting her next move in her constant battle to keep Lily the Clingy Staffy safely inside the yard. You'll also find her scootering home along the estuary at a max speed of 47 kmph.</p>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .bio-inner -->
+        </div> <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Nat</h3>
+      </div> <!-- .person-wrap -->
+
       <!-- Patrick -->
       <div id="person-patrick" class="person-wrap js-iso-element" data-coffees="1" data-commits="1118">
         <a href="#" class="person js-show-bio">
