Add in Dean Fiona nad James avatars and bios

--- a/src/terms/index.html
+++ b/src/terms/index.html
@@ -20,6 +20,7 @@ title: Media Suite | Terms and Conditions
       <p>We will accept orders for work from you or any authorised delegate via phone, fax, email, our website or via any internet based communications. </p>
       <p>All work will be carried out at our standard hourly rates unless otherwise negotiated. Our standard hourly rates change from time to time and can be obtained by contacting Us. </p>
       <p>We provide estimates free of charge, however we may charge for the preparation of quotes and proposals.</p>
+      <p>The suspension of any work on Your instruction, or where You do not provide further instruction for a period of 60 days or more, shall entitle Us to payment in full for all work in progress at the time of suspension. We may revise the quotation of the uncompleted portion of work before proceeding. </p>
 
       <h2 class="lowercase">Payment</h2>
       <p>We reserve the right to require full or part payment before starting work. All fees and charges are quoted exclusive of GST.</p>
@@ -27,6 +28,8 @@ title: Media Suite | Terms and Conditions
       <p>If  You think there has been a mistake or omission on Your invoice or statement it is Your responsibility to bring this to Our attention and We will endeavour to address Your concerns promptly.  Notwithstanding this, Your invoices must be paid in full, without deduction by their due date.  If  there has been a mistake or omission We will reimburse You.</p>
       <p>We can apply any credit balance or any deposit We hold against Your account or any payment We owe You, to cover any outstanding charges. </p>
       <p>Should debt recovery be necessary, You are liable for all fees and costs, including but not limited to legal costs, incurred by Us.</p>
+      <p>Where You owe Us any amount, We shall have a general lien against all goods or property in Our hands or under Our control and We shall be entitled, upon the expiration of 14 days notice to dispose of those goods or property as We see fit and apply any proceeds against any overdue accounts.</p>
+      <p>Where You owe Us any amount We are not obliged to release any files, domains, or information to You.</p>
 
       <h2 class="lowercase">Authorisation for credit enquiries</h2>
       <p>You irrevocably authorise any person, organisation or company to provide us with such information as We may require in response to a credit enquiry.</p>
