Fix text in job listing

--- a/src/careers/web-developer-position/index.html
+++ b/src/careers/web-developer-position/index.html
@@ -31,7 +31,7 @@ positionname: Intermediate / Senior Web Developer
         <li>Django</li>
         <li>Ember.js</li>
         <li>NodeJS</li>
-        <li>AngularJS (latest)</li>
+        <li>Angular (latest)</li>
       </ul>
 
       <p>We genuinely value cultural fit and attitude ahead of specific technical experience. If you think your experience will transfer to our stack - please get in touch. Just to be clear... the only non-negotiable is someone who is going to write great code.</p>
