Separate out job listing into two separate positions

--- a/src/careers/senior-web-developer-position/index.html
+++ b/src/careers/senior-web-developer-position/index.html
@@ -1,19 +1,19 @@
 ---
 layout: default
-title: Media Suite | Careers | Intermediate / Senior Web Developer
-positionname: Intermediate / Senior Web Developer
+title: Media Suite | Careers | Senior Web Developer
+positionname: Senior Web Developer
 ---
 <div id="main-wrap" class="internal-page careers-page">
 
   <div class="max-1000 align-center clearfix">
 
-    <h1 class="lowercase underline-orange">Intermediate / Senior Web Developer</h1>
+    <h1 class="lowercase underline-orange">Senior Web Developer</h1>
     {% include crumbs-careers.html %}
 
     <div class="positions-available align-left">
 
       <img src="/img/careers/richie.png" class="job-richie">
-      <div class="post-date fancy-pants-font">Posted on 29 August 2017</div>
+      <div class="post-date fancy-pants-font">Posted on 5 September 2017</div>
 
       <p>We cherish our culture, so every hire we make is carefully considered. If you’re tempted to join the Media Suite team, be sure to read on and make sure our ideologies are aligned.</p>
       <p>We are a team of curious-minded people who support each other, hold robust debates and don’t mind helping each other move house on the weekend. We thrive on challenges, we view our successes (and failures) as opportunities for growth, and we never, ever want to stop learning.</p>
@@ -24,7 +24,7 @@ positionname: Intermediate / Senior Web Developer
       <p>You will be embedded into a multi-developer team committed to a culture of testing, automation, peer review, knowledge sharing, professional development, remote working and embracing change.</p>
 
       <h3>Skills &amp; experience</h3>
-      <p>We're looking for intermediate to senior level developers with a computer science (or equivalent) degree and a minimum of 4 years real-world experience. If you don't hold a relevant degree or have the required experience and still wish to apply then please ensure you have a stellar cover page on your application.</p>
+      <p>We're looking for intermediate to senior level developers with a computer science (or equivalent) degree and a minimum of 5 years real-world experience. If you don't hold a relevant degree or have the required experience and still wish to apply then please ensure you have a stellar cover page on your application.</p>
       <p>Ideally you would have experience with (or the ability to quickly learn) any of the following:</p>
 
       <ul class="fancy-pants-font">
